# redgreen

./: DESCRIPTION  NAMESPACE
R/: extendr-wrappers.R
man/: redgreen-package.Rd  redgreen.Rd
src/: Makevars  Makevars.win  entrypoint.c  redgreen-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
