[package]
name = 'redgreen'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'redgreen'

[dependencies]
extendr-api = { git = "https://github.com/extendr/extendr.git", rev = "cb85a21a90c3fcb538a40fcea03058454edb3dac" }
plotters = { version = "0.3.6", default-features = false, features = ["plotters-svg", "svg_backend", "area_series"] }
